# BSplineInterpolation

./: .clang-format  CMakeLists.txt  LICENSE  README.md  intp
.github/workflows/: cmake.yml
matlab/: Example.asv  Example.m  bspline.cpp  bspline.mexw64
src/: main.cpp
src/include/: BSpline.hpp  BandLU.hpp  BandMatrix.hpp  Contour.hpp  DedicatedThreadPool.hpp  Interpolation.hpp  InterpolationTemplate.hpp  Mesh.hpp  ScalarField.hpp  aligned-allocator.hpp  util.hpp
test/: Assertion.hpp  CMakeLists.txt  Example.m  band-matrix-and-solver-test.cpp  band-matrix-test.cpp  bspline-test.cpp  bspline.cpp  interpolation-speed-test.cpp  interpolation-template-test.cpp  interpolation-test.cpp  mesh-test.cpp  rel_err.hpp  util-test.cpp
test/src/: Timer.cpp  band-matrix-and-solver-test.cpp  bspline-test.cpp  interpolation-eval-proxy-test.cpp  interpolation-speed-test.cpp  interpolation-template-test.cpp  interpolation-test.cpp  mesh-test.cpp  util-test.cpp
test/src/include/: Assertion.hpp  Timer.h  Vec.hpp  rel_err.hpp
